--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "Generates short classnames for your css modules",
     "main": "src/index.js",
     "scripts": {
-        "start": "node src/index.js"
+        "start": "node src/index.js",
+        "play": "node src/playground/index.js"
     },
     "repository": {
         "type": "git",
